--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
   <h1 class="text-3xl font-bold underline">
-    Hello world!
+    Hello world
   </h1>
 </body>
+<!-- Tracker Do.my.id -->
+<script type="module" src="https://cdn.jsdelivr.net/gh/domyid/tracker@main/index.js"></script>
 </html>
