--- a/index.html
+++ b/index.html
@@ -3,15 +3,40 @@
 <head>
   <!-- Google Search Console -->
   <meta name="google-site-verification" content="h908g9Xlz7JZFzHk6Xp4oZUF-Iqhp5tPQXpsk2XEWtA" />
+  <!-- Font Inter tight -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <!-- Link CSS -->
+  <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Custom Tailwindcss -->
+  <script>
+    tailwind.config = {
+      darkMode: 'class',
+      theme: {
+        container: {
+          center: true,
+          padding: '16px',
+        },
+        extend: {
+          colors: {
+            clifford: '#da373d',
+          },
+          screens: {
+            '2xl': '1320px',
+          },
+        }
+      }
+    }
+  </script>
 </head>
 <body>
-  <h1 class="text-3xl font-bold underline">
-    Hello world
-  </h1>
+  
 </body>
 <!-- Tracker Do.my.id -->
+ <script type="module" src="script.js"></script>
 <script type="module" src="https://cdn.jsdelivr.net/gh/domyid/tracker@main/index.js"></script>
 </html>
