--- a/index.html
+++ b/index.html
@@ -12,56 +12,95 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
-  <!-- Custom Tailwindcss -->
-  <script>
-    tailwind.config = {
-      darkMode: 'class',
-      theme: {
-        container: {
-          center: true,
-          padding: '16px',
-        },
-        extend: {
-          colors: {
-            clifford: '#da373d',
-          },
-          screens: {
-            '2xl': '1320px',
-          },
-        }
-      }
-    }
-  </script>
 </head>
 <body>
-  <nav class="container flex items-center justify-between p-4 relative">
-  <!-- Logo -->
-  <div>
-    <h1 class="text-4xl font-semibold">Dit Doang!</h1>
-  </div>
+  <nav class="navbar-glass container flex items-center justify-between px-6 py-3 mt-4 rounded-full sticky top-4 z-50">
+    <!-- Logo -->
+    <div class="flex items-center">
+      <div class="bg-primary-600 p-2 rounded-lg mr-3">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-white" viewBox="0 0 20 20" fill="currentColor">
+          <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
+        </svg>
+      </div>
+      <h1 class="text-3xl font-bold bg-clip-text text-transparent bg-gradient-to-r from-primary-700 to-primary-500">Ditlabs</h1>
+    </div>
 
-  <!-- Tombol Hamburger (mobile only) -->
-  <div class="lg:hidden">
-    <button id="hamburger" class="text-4xl focus:outline-none">&#9776;</button>
-  </div>
+    <!-- Tombol Hamburger (mobile only) -->
+    <div class="lg:hidden">
+      <button id="hamburger" class="text-3xl text-primary-700 focus:outline-none transition-transform hover:rotate-90">&#9776;</button>
+    </div>
 
-  <!-- Menu horizontal (desktop only) -->
-  <div id="menu" class="hidden lg:flex space-x-12">
-    <a class="text-xl font-medium" href="#">Home</a>
-    <a class="text-xl font-medium" href="#">About</a>
-    <a class="text-xl font-medium" href="#">Services</a>
-    <a class="text-xl font-medium" href="#">Contact</a>
-  </div>
+    <!-- Menu horizontal (desktop only) -->
+    <div id="menu" class="hidden lg:flex space-x-10">
+      <a class="text-lg font-medium text-gray-800 hover:text-primary-600 transition relative group" href="#">
+        Home
+        <span class="absolute bottom-0 left-0 w-0 h-1 bg-primary-500 group-hover:w-full transition-all duration-300"></span>
+      </a>
+      <a class="text-lg font-medium text-gray-800 hover:text-primary-600 transition relative group" href="#">
+        About
+        <span class="absolute bottom-0 left-0 w-0 h-1 bg-primary-500 group-hover:w-full transition-all duration-300"></span>
+      </a>
+      <a class="text-lg font-medium text-gray-800 hover:text-primary-600 transition relative group" href="#">
+        Services
+        <span class="absolute bottom-0 left-0 w-0 h-1 bg-primary-500 group-hover:w-full transition-all duration-300"></span>
+      </a>
+      <a class="text-lg font-medium text-gray-800 hover:text-primary-600 transition relative group" href="#">
+        Portfolio
+        <span class="absolute bottom-0 left-0 w-0 h-1 bg-primary-500 group-hover:w-full transition-all duration-300"></span>
+      </a>
+      <a class="text-lg font-medium text-gray-800 hover:text-primary-600 transition relative group" href="#">
+        Contact
+        <span class="absolute bottom-0 left-0 w-0 h-1 bg-primary-500 group-hover:w-full transition-all duration-300"></span>
+      </a>
+    </div>
 
-  <!-- Pop-up Menu (mobile) -->
-  <div id="popup" class="hidden absolute top-20 right-4 w-56 bg-white border border-gray-200 shadow-xl rounded-xl p-4 flex-col z-50 lg:hidden animate-fade-in">
-    <a class="block text-lg font-medium text-gray-700 hover:text-green-500 transition border-b pb-2 mb-2" href="#">Home</a>
-    <a class="block text-lg font-medium text-gray-700 hover:text-green-500 transition border-b pb-2 mb-2" href="#">About</a>
-    <a class="block text-lg font-medium text-gray-700 hover:text-green-500 transition" href="#">Services</a>
-  </div>
-</nav>
+    <!-- CTA Button Desktop -->
+    <div class="hidden lg:block">
+      <button class="btn-primary px-6 py-2.5 rounded-full text-white font-medium">
+        Get Started
+      </button>
+    </div>
+
+    <!-- Pop-up Menu (mobile) -->
+    <div id="popup" class="hidden mobile-menu absolute top-20 right-4 w-56 rounded-2xl p-4 flex-col z-50 lg:hidden animate-fade-in">
+      <a class="block text-lg font-medium text-gray-700 hover:text-primary-600 py-3 px-4 rounded-lg hover:bg-primary-50 transition flex items-center" href="#">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
+        </svg>
+        Home
+      </a>
+      <a class="block text-lg font-medium text-gray-700 hover:text-primary-600 py-3 px-4 rounded-lg hover:bg-primary-50 transition flex items-center" href="#">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+        </svg>
+        About
+      </a>
+      <a class="block text-lg font-medium text-gray-700 hover:text-primary-600 py-3 px-4 rounded-lg hover:bg-primary-50 transition flex items-center" href="#">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 5a2 2 0 012-2h10a2 2 0 012 2v16l-7-3.5L5 21V5z" />
+        </svg>
+        Services
+      </a>
+      <a class="block text-lg font-medium text-gray-700 hover:text-primary-600 py-3 px-4 rounded-lg hover:bg-primary-50 transition flex items-center" href="#">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5m-4 0h4" />
+        </svg>
+        Portfolio
+      </a>
+      <a class="block text-lg font-medium text-gray-700 hover:text-primary-600 py-3 px-4 rounded-lg hover:bg-primary-50 transition flex items-center" href="#">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
+        </svg>
+        Contact
+      </a>
+      <button class="btn-primary w-full mt-3 py-2.5 rounded-full text-white font-medium">
+        Get Started
+      </button>
+    </div>
+  </nav>
 </body>
 <!-- Tracker Do.my.id -->
- <script type="module" src="script.js"></script>
+ <script src="script.js"></script>
+ <script src="tailwind.config.js"></script>
 <script type="module" src="https://cdn.jsdelivr.net/gh/domyid/tracker@main/index.js"></script>
 </html>
