improve basic navbar to responsive design

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
+  <!-- Navbar -->
   <nav class="navbar-glass container flex items-center justify-between px-6 py-3 mt-4 rounded-full sticky top-4 z-50">
     <!-- Logo -->
     <div class="flex items-center">
