--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <!-- Navbar -->
-  <nav class="navbar-glass container flex items-center justify-between px-6 py-3 mt-4 rounded-full sticky top-4 z-50">
+  <nav class="navbar-glass container flex items-center justify-between px-6 py-4 mt-4 rounded-full sticky top-4 z-50">
     <!-- Logo -->
     <div class="flex items-center">
       <div class="bg-primary-600 p-2 rounded-lg mr-3">
@@ -99,6 +99,45 @@
       </button>
     </div>
   </nav>
+
+  <!-- Hero -->
+  <section class="hero-bg py-16 md:py-24 mt-8">
+    <div class="container">
+      <div class="flex flex-col lg:flex-row items-center">
+        <!-- Hero Content -->
+        <div class="w-full lg:w-1/2 mb-12 lg:mb-0 animate-fade-in">
+          <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold text-gray-800 leading-tight mb-6">
+            Enchanced your Android <span class="bg-clip-text text-transparent bg-gradient-to-r from-primary-600 to-primary-400">Performance now!</span>
+          </h1>
+          <p class="text-xl text-gray-600 mb-8 max-w-xl">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi rerum autem nostrum esse, veniam excepturi nihil suscipit earum possimus tempora!
+          </p>
+          <div class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-4">
+            <button class="btn-primary px-8 py-4 rounded-full text-lg font-medium">
+              Get Started Now
+            </button>
+            <button class="px-8 py-4 rounded-full text-lg font-medium border-2 border-primary-500 text-primary-600 hover:bg-primary-50 transition">
+              View Our Work
+            </button>
+          </div>
+          <div class="mt-10 flex items-center">
+            <div class="flex -space-x-3">
+              <div class="w-10 h-10 rounded-full bg-primary-200 border-2 border-white"></div>
+              <div class="w-10 h-10 rounded-full bg-primary-300 border-2 border-white"></div>
+              <div class="w-10 h-10 rounded-full bg-primary-400 border-2 border-white"></div>
+              <div class="w-10 h-10 rounded-full bg-primary-500 border-2 border-white flex items-center justify-center text-white font-medium">+15</div>
+            </div>
+            <div class="ml-4">
+              <p class="font-medium text-gray-800">Trusted by customer</p>
+              <div class="flex items-center">
+                <svg class="w-5 h-5 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
+                  <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"/>
+                </svg>
+                <p class="ml-1 text-gray-600"><span class="font-bold text-gray-800">4.9/5</span> (100+ reviews)</p>
+              </div>
+            </div>
+          </div>
+        </div>
 </body>
 <!-- Tracker Do.my.id -->
  <script src="script.js"></script>
