--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+  <title>Ditlabs Android</title>
   <!-- Google Search Console -->
   <meta name="google-site-verification" content="h908g9Xlz7JZFzHk6Xp4oZUF-Iqhp5tPQXpsk2XEWtA" />
   <!-- Font Inter tight -->
