--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en" class="scroll-smooth">
 <head>
   <title>Ditlabs Android</title>
   <!-- Google Search Console -->
@@ -139,6 +139,53 @@
             </div>
           </div>
         </div>
+        <!-- Hero Image -->
+        <div class="w-full lg:w-1/2 flex justify-center animate-fade-in" style="animation-delay: 0.2s">
+          <div class="relative">
+            <div class="absolute -top-6 -right-6 w-64 h-64 bg-primary-500 rounded-full opacity-10"></div>
+            <div class="absolute -bottom-6 -left-6 w-72 h-72 bg-primary-400 rounded-full opacity-10"></div>
+            <div class="relative bg-gradient-to-br from-white to-gray-100 p-8 rounded-3xl shadow-2xl transform rotate-3">
+              <div class="bg-gray-800 rounded-2xl overflow-hidden shadow-lg">
+                <div class="bg-gray-900 h-8 flex items-center px-4">
+                  <div class="flex space-x-2">
+                    <div class="w-3 h-3 bg-red-500 rounded-full"></div>
+                    <div class="w-3 h-3 bg-yellow-500 rounded-full"></div>
+                    <div class="w-3 h-3 bg-green-500 rounded-full"></div>
+                  </div>
+                </div>
+                <div class="p-6">
+                  <div class="flex justify-between items-center mb-4">
+                    <div class="text-white font-bold text-xl">After Modded</div>
+                    <div class="text-primary-400 font-medium">Android Device</div>
+                  </div>
+                  <div class="grid grid-cols-3 gap-4">
+                    <div class="bg-gray-700 rounded-lg p-3 text-center">
+                      <div class="text-primary-400 text-2xl font-bold">2x</div>
+                      <div class="text-gray-400 text-sm">Performance</div>
+                    </div>
+                    <div class="bg-gray-700 rounded-lg p-3 text-center">
+                      <div class="text-primary-400 text-2xl font-bold">5h+</div>
+                      <div class="text-gray-400 text-sm">Battery Life</div>
+                    </div>
+                    <div class="bg-gray-700 rounded-lg p-3 text-center">
+                      <div class="text-primary-400 text-2xl font-bold">100%</div>
+                      <div class="text-gray-400 text-sm">Customizable</div>
+                    </div>
+                  </div>
+                  <div class="mt-6 bg-gradient-to-r from-primary-600 to-primary-700 rounded-lg p-4 text-center">
+                    <div class="text-white font-bold">Optimized for Gaming</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  
+
 </body>
 <!-- Tracker Do.my.id -->
  <script src="script.js"></script>
