--- a/index.html
+++ b/index.html
@@ -65,31 +65,31 @@
 
     <!-- Pop-up Menu (mobile) -->
     <div id="popup" class="hidden mobile-menu absolute top-20 right-4 w-56 rounded-2xl p-4 flex-col z-50 lg:hidden animate-fade-in">
-      <a class="block text-lg font-medium text-gray-700 hover:text-primary-600 py-3 px-4 rounded-lg hover:bg-primary-50 transition flex items-center" href="#">
+      <a class="block text-lg font-medium text-gray-700 hover:text-primary-600 py-3 px-4 rounded-lg hover:bg-primary-50 transition items-center" href="#">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
         </svg>
         Home
       </a>
-      <a class="block text-lg font-medium text-gray-700 hover:text-primary-600 py-3 px-4 rounded-lg hover:bg-primary-50 transition flex items-center" href="#">
+      <a class="block text-lg font-medium text-gray-700 hover:text-primary-600 py-3 px-4 rounded-lg hover:bg-primary-50 transition items-center" href="#">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
         </svg>
         About
       </a>
-      <a class="block text-lg font-medium text-gray-700 hover:text-primary-600 py-3 px-4 rounded-lg hover:bg-primary-50 transition flex items-center" href="#">
+      <a class="block text-lg font-medium text-gray-700 hover:text-primary-600 py-3 px-4 rounded-lg hover:bg-primary-50 transition items-center" href="#">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 5a2 2 0 012-2h10a2 2 0 012 2v16l-7-3.5L5 21V5z" />
         </svg>
         Services
       </a>
-      <a class="block text-lg font-medium text-gray-700 hover:text-primary-600 py-3 px-4 rounded-lg hover:bg-primary-50 transition flex items-center" href="#">
+      <a class="block text-lg font-medium text-gray-700 hover:text-primary-600 py-3 px-4 rounded-lg hover:bg-primary-50 transition items-center" href="#">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5m-4 0h4" />
         </svg>
         Portfolio
       </a>
-      <a class="block text-lg font-medium text-gray-700 hover:text-primary-600 py-3 px-4 rounded-lg hover:bg-primary-50 transition flex items-center" href="#">
+      <a class="block text-lg font-medium text-gray-700 hover:text-primary-600 py-3 px-4 rounded-lg hover:bg-primary-50 transition items-center" href="#">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
         </svg>
