--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                 </div>
                 <div>
                   <h4 class="font-bold text-gray-800">Expert Technicians</h4>
-                  <p class="text-gray-600">Our team has 8+ years of Android modding experience</p>
+                  <p class="text-gray-600">Our team has 2+ years of Android modding experience</p>
                 </div>
               </div>
               <div class="flex items-start">
@@ -219,7 +219,7 @@
                 </div>
                 <div>
                   <h4 class="font-bold text-gray-800">Quality Guarantee</h4>
-                  <p class="text-gray-600">30-day satisfaction guarantee on all our services</p>
+                  <p class="text-gray-600">7-day satisfaction guarantee on all our services</p>
                 </div>
               </div>
               <div class="flex items-start">
@@ -229,8 +229,8 @@
                   </svg>
                 </div>
                 <div>
-                  <h4 class="font-bold text-gray-800">Secure Process</h4>
-                  <p class="text-gray-600">All modifications are performed safely without voiding warranties</p>
+                  <h4 class="font-bold text-gray-800">Fast Response</h4>
+                  <p class="text-gray-600">Secure and fast process service</p>
                 </div>
               </div>
             </div>
@@ -240,11 +240,11 @@
         <div class="animate-fade-in" style="animation-delay: 0.4s">
           <div class="grid grid-cols-2 gap-6">
             <div class="bg-white rounded-2xl p-6 shadow-lg">
-              <div class="text-5xl font-bold text-primary-600 mb-2">8+</div>
+              <div class="text-5xl font-bold text-primary-600 mb-2">2+</div>
               <div class="text-gray-800 font-medium">Years Experience</div>
             </div>
             <div class="bg-white rounded-2xl p-6 shadow-lg">
-              <div class="text-5xl font-bold text-primary-600 mb-2">500+</div>
+              <div class="text-5xl font-bold text-primary-600 mb-2">100+</div>
               <div class="text-gray-800 font-medium">Devices Modded</div>
             </div>
             <div class="bg-white rounded-2xl p-6 shadow-lg">
@@ -399,7 +399,7 @@
     </div>
   </section>
 
-<!-- Contact Section -->
+  <!-- Contact Section -->
   <section id="contact" class="py-20">
     <div class="container">
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-12">
