add carousel section

--- a/index.html
+++ b/index.html
@@ -261,6 +261,70 @@
     </div>
   </section>
 
+  <!-- Carousel -->
+  <section id="testimonials" class="py-20 bg-gray-50">
+  <div class="container text-center">
+    <h2 class="relative inline-block text-4xl font-bold text-gray-800">What Our Clients Say</h2>
+    <p class="text-xl text-gray-600 max-w-2xl mx-auto mt-4">Real stories from satisfied users who have experienced the Ditlabs difference.</p>
+  </div>
+
+  <div class="marquee-container w-full overflow-hidden mt-16">
+    <div id="marquee-content" class="flex w-max animate-marquee">
+      <div class="testimonial-card-marquee flex-shrink-0 w-80 md:w-96 mx-4">
+        <div class="bg-white p-6 rounded-2xl shadow-lg h-full flex flex-col">
+          <img src="https://i.pravatar.cc/150?u=a042581f4e29026704d" alt="Client 1" class="w-16 h-16 rounded-full mb-4 border-2 border-primary-200 shadow-md mx-auto">
+          <blockquote class="text-gray-600 italic text-center mb-4 flex-grow">
+            "Performa ponsel gaming saya meningkat drastis! Sesi bermain game jadi lebih lancar tanpa lag sama sekali."
+          </blockquote>
+          <div class="text-center">
+            <p class="font-bold text-gray-900">Alex Johnson</p>
+            <p class="text-sm text-gray-500">Mobile Gamer</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="testimonial-card-marquee flex-shrink-0 w-80 md:w-96 mx-4">
+        <div class="bg-white p-6 rounded-2xl shadow-lg h-full flex flex-col">
+          <img src="https://i.pravatar.cc/150?u=a042581f4e29026704e" alt="Client 2" class="w-16 h-16 rounded-full mb-4 border-2 border-primary-200 shadow-md mx-auto">
+          <blockquote class="text-gray-600 italic text-center mb-4 flex-grow">
+            "Awalnya ragu, tapi Ditlabs berhasil membuat tablet lama saya terasa seperti baru lagi. Baterainya jadi lebih awet!"
+          </blockquote>
+          <div class="text-center">
+            <p class="font-bold text-gray-900">Samantha Bee</p>
+            <p class="text-sm text-gray-500">Content Creator</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="testimonial-card-marquee flex-shrink-0 w-80 md:w-96 mx-4">
+        <div class="bg-white p-6 rounded-2xl shadow-lg h-full flex flex-col">
+          <img src="https://i.pravatar.cc/150?u=a042581f4e29026704f" alt="Client 3" class="w-16 h-16 rounded-full mb-4 border-2 border-primary-200 shadow-md mx-auto">
+          <blockquote class="text-gray-600 italic text-center mb-4 flex-grow">
+            "Prosesnya cepat dan aman. Tim support sangat membantu menjawab semua pertanyaan saya."
+          </blockquote>
+          <div class="text-center">
+            <p class="font-bold text-gray-900">David Chen</p>
+            <p class="text-sm text-gray-500">Android Enthusiast</p>
+          </div>
+        </div>
+      </div>
+
+       <div class="testimonial-card-marquee flex-shrink-0 w-80 md:w-96 mx-4">
+        <div class="bg-white p-6 rounded-2xl shadow-lg h-full flex flex-col">
+          <img src="https://i.pravatar.cc/150?u=a042581f4e29026704g" alt="Client 4" class="w-16 h-16 rounded-full mb-4 border-2 border-primary-200 shadow-md mx-auto">
+          <blockquote class="text-gray-600 italic text-center mb-4 flex-grow">
+            "Kustomisasi OS-nya keren banget. Saya bisa mengatur semua hal sesuai keinginan. Benar-benar ultimate!"
+          </blockquote>
+          <div class="text-center">
+            <p class="font-bold text-gray-900">Maria Garcia</p>
+            <p class="text-sm text-gray-500">Power User</p>
+          </div>
+        </div>
+      </div>
+      </div>
+  </div>
+</section>
+  
   <!-- Services Section -->
   <section id="service" class="py-20 bg-gradient-to-br from-gray-50 to-white">
     <div class="container">
